# UFBA2018

./: Geodesic.frag  Geodesic.geom  Geodesic.vert  IPsinewave.cbp  IPsinewave.cscope_file_list  IPsinewave.depend  IPsinewave.layout  LoadShaders.cpp  LoadShaders.hpp  Makefile  Util.hpp  Utils.hpp  backup_tessUnif.tesc  basicTerrainfrag.glsl  basinTerrain.glsl  camera.h  controls.cpp  controls.hpp  culling.geom  culling.vert  filesystem.h  gshader.geom  main  main.cpp  main.hpp  oTess.glsl  root_directory.h  simplex.h  terrain.cpp  terrain.frag  terrain.geom  terrain.h  terrain.tesc  terrain.tese  terrain.vert  terrainFrag.glsl  terrainGeo.glsl  terrainTesc.glsl  terrainTese.glsl  terrainVert.glsl  (+12 more)
terrain/: terrain.nsight-gfxproj
terrain/CppCaptures/main__2019_09_06__11_37_10/: Arguments.h  Build.py  CMakeLists.txt  DataScope.h  Frame0Part00.cpp  FrameReset00.cpp  FrameSetup00.cpp  Makefile  ReplayProcedures.cpp  Resources.h  Resources00.cpp  ThreadPoolImpl.h  WinResourcesSetup.cpp  WindowSystem.h  WindowSystem_X11.cpp  WindowSystem_Xcb.cpp  data.bin.rec  glext.h  main__2019_09_06__11_37_10.nsight-gfxcppcap  nvglx.h
terrain/CppCaptures/main__2019_09_06__11_37_10/int/: CMakeCache.txt
terrain/CppCaptures/main__2019_09_06__11_45_35/: Application.cpp  CMakeLists.txt  Frame0Part00.cpp  FrameSetup00.cpp  Helpers.h  Main.cpp  Makefile  NvEW_GL.cpp  NvEW_GLX.cpp  PerfMarkersSetup.cpp  ReplayProcedures.cpp  Resources.h  Resources00.cpp  ThreadPool.cpp  Threading.cpp  Win32Application.h  WindowSystem_D2d.cpp  gl.h  main__2019_09_06__11_45_35.nsight-gfxcppcap
terrain/CppCaptures/main__2019_09_06__11_45_41/: Application.h  CMakeLists.txt  FrameReset00.cpp  Helpers.cpp  Makefile  NvEW_GL.h  NvEW_GLX.h  PerfMarkersReset.cpp  ReadOnlyDatabase.cpp  ReadOnlyDatabase.h  ReplayProcedures.cpp  ReplayProcedures.h  ThreadPool.h  Threading.h  Win32Application.cpp  WinResourcesReset.cpp  WindowSystem_Win32.cpp  data.bin.rec  main__2019_09_06__11_45_41.nsight-gfxcppcap
